--- a/Web/package.json
+++ b/Web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
-    "@volcengine/rtc": "4.51.0",
+    "@volcengine/rtc": "^4.54.0",
     "antd": "^4.21.7",
     "i18next": "^21.8.16",
     "react": "^18.2.0",
