Integrate Tea SDK

--- a/Web/package.json
+++ b/Web/package.json
@@ -6,6 +6,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "@volcengine/rtc": "^4.54.0",
     "antd": "^4.21.7",
+    "@datarangers/sdk-javascript": "0.0.4",
     "i18next": "^21.8.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
